alignment issues fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
 body {
     background: #eee;
     text-align: center;
-    padding: 0 25px;
+    padding: 0 36px;
 }
 
 #main {
